workshop04/base/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  # headless service
  clusterIP: None
---
apiVersion: apps/v1
# can use stateful set, stateful set allows a fixed name unlike deployment (stateless)
# stateful set name: wpdb-sts-0
# deployment name: wordpress-mysql-5dc54599cf-j44st
# stateful allows a fixed FQDN to the pod
kind: StatefulSet
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  replicas: 1
  serviceName: wordpress-mysql
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-pv-claim
      labels:
        app: wordpress
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: do-block-storage 
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-pv-claim
          mountPath: /var/lib/mysql
