workshop04/base/wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-hsvc
  labels:
    name: wordpress-hsvc
spec:
  # headless service
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: wordpress-po
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-sts
  labels:
    name: wordpress-sts
spec:
  replicas: 1
  serviceName: wordpress-hsvc
  selector:
    matchLabels:
      name: wordpress-po
  volumeClaimTemplates:
  - metadata:
      name: wordpress-pv-claim
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: do-block-storage 
  template:
    metadata:
      name: wordpress-po
      labels:
        name: wordpress-po
    spec:
      containers:
      - name: wordpress
        image: wordpress:6-apache
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-pv-claim
          mountPath: /var/www/html
---
# Ingress confirguration for this app, nginx or another ingress controller must be deployed first
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
  labels:
    name: wp-ing
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "7"
spec:
  # k get ingressclass
  ingressClassName: nginx
  # how to route the traffic
  rules:
  # url for browser, uses nip.io wp-139.59.192.228.nip.io
  - host: FQDN
    http:
      paths:
      - path: /
        # anything that starts with / are routed to 
        pathType: Prefix
        backend:
          service:
            name: wordpress-hsvc
            port:
              number: 80
