workshop04/base/netpol.yaml
---
# Only allow wordpress access to DB
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-netpol
  labels:
    name: db-access
spec:
  podSelector:
    matchLabels:
      app: wordpress
      tier: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress
          tier: frontend
    ports:
    - port: 3306
      protocol: TCP
# rule to allow ingress
